Alterações nos dockerfiles